--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Document</title>
+        <title>RevoU</title>
+        <style>table, th, td {
+            border: 1px solid black;
+        }</style>
     </head>
     <body>
-        <h1>RevoU</h1>
+        <h1>Test day 2</h1>
+        <p>Tes latihan website <b><i>pertama</i></b></p>
+        
+        <ol type="i">
+            <li>satu</li>
+            <li>dua</li>
+        </ol>
+        <table>
+            <tr>
+                <th>Nama</th>
+                <th>Asal</th>
+                <th>Domisili</th>
+                <th>Email</th>
+            </tr>
+            <tr>
+                <td>I-can</td>
+                <td colspan="2"><center>Banyumas</center></td>
+                <td>jiojfonf20@gmail.com</td>
+            </tr>
+        </table><br>
+
+        <img src="download.jpg" alt="dari website" width="500px" height="300px"><br>
+
+        <a href="https://wwww.google.com/" target="_blank">Google</a>
     </body>
 </html>
