--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         }</style>
     </head>
     <body>
-        <h1>Test day 2</h1>
+        <h1>Test week 1 day 2</h1>
         <p>Tes latihan website <b><i>pertama</i></b></p>
         
         <ol type="i">
