--- a/Form.html
+++ b/Form.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Latihan form</h1>
     <form action="GET">
-        <label for="name">Nama :</label>
+        <label for="nama">Nama :</label>
         <input id="name" type="text" name="nama">
         <br>
         <label id="usia" for="usia">Usia :</label>
